--- a/fe/.babelrc
+++ b/fe/.babelrc
@@ -1,14 +1,18 @@
 {
-  "presets": [
-    ["env", { "modules": false }],
-    "stage-2"
+  "plugins": [
+    "transform-runtime"
   ],
-  "plugins": ["transform-runtime"],
-  "comments": false,
-  "env": {
-    "test": {
-      "presets": ["env", "stage-2"],
-      "plugins": [ "istanbul" ]
-    }
-  }
+  "presets": [
+    [
+      "env",
+      {
+        "targets": {
+          "browsers": [
+            "last 3 versions"
+          ]
+        }
+      }
+    ],
+    "stage-3"
+  ]
 }
