--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "cheerio": "^1.0.0-rc.1",
     "koa": "^2.2.0",
     "koa-bodyparser": "^4.2.0",
+    "koa-cors": "0.0.16",
     "koa-router": "^7.2.0",
     "koa-static": "^3.0.0",
     "mysql": "^2.13.0",
