--- a/fe/package.json
+++ b/fe/package.json
@@ -9,12 +9,13 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules --config=./build/webpack.config.js"
   },
   "dependencies": {
-    "babel-runtime": "^6.23.0",
     "axios": "^0.16.1",
+    "babel-runtime": "^6.23.0",
     "element-ui": "^1.3.3",
     "reset.css": "^2.0.2",
     "vue": "^2.2.6",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.0.1",
